DB repositories + GUI (login/cart/orders) + tests; add README and .gitignore